changed color of the text

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>My First Web Page Hosted Live on Sever.</h1>
+    <h1 style="color:bisque">My First Web Page Hosted Live on Sever.</h1>
 </body>
 </html>
